# codal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.backend  crawler.yaml  dagster.yaml  docker-compose.yaml  pyproject.toml  workspace.yaml
codal/: app.py  charts.py  definitions.py  endpoints.py  models.py  schemas.py  settings.py  utils.py
codal/dagster_assets/fetcher/: assets.py  jobs.py  partitions.py  resources.py  schedules.py  sensors.py  utils.py
codal/fetcher/: api.py  assets.py  jobs.py  partitions.py  repository.py  resources.py  schedules.py  schemas.py  sensors.py  utils.py  {'Total': 601, 'Page': 31, 'Letters': [{.py
codal/parser/: assets.py  exceptions.py  financial_ratios.py  mappings.py  prediction.py  repository.py  schemas.py  sensors.py  utils.py
