[tool.poetry]
name = "codal"
version = "0.1.0"
description = ""
authors = ["aradng <aradarang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
httpx = "^0.27.2"
pandas = "^2.2.3"
plotly = "^5.24.1"
persiantools = "^5.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pydantic = "^2.10.1"
ruff = "^0.8.0"
pyupgrade = "^3.19.0"
codespell = "^2.3.0"
ipykernel = "^6.29.5"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
