[tool.poetry]
name = "codal"
version = "0.1.0"
description = ""
authors = ["aradng <aradarang@gmail.com>"]
readme = "README.md"

[tool.dagster]
module_name = "codal.definitions"
code_location_name = "codal"

[tool.black]
line-length = 79
preview = true

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'requests'
ignore_missing_imports = true

[tool.codespell]
skip = '*.json,poetry.lock'
ignore-words-list = "nin,astroid,Childs"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
httpx = "^0.27.2"
pandas = "^2.2.3"
plotly = "^5.24.1"
dagster = "^1.9.4"
dagster-webserver = "^1.9.4"
requests = "^2.32.3"
pymongo = "^4.10.1"
jdatetime = "^5.0.0"
aiohttp = "^3.11.11"
openpyxl = "^3.1.5"
fastapi = "^0.115.7"
beautifulsoup4 = "4.12.3"
numpy = "2.2.0"
fuzzywuzzy = "0.18.0"
lxml = "5.3.0"
python-levenshtein = "^0.26.1"
pydantic-settings = "^2.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pydantic = "^2.8.0"
ruff = "^0.8.0"
pyupgrade = "^3.19.0"
codespell = "^2.3.0"
ipykernel = "^6.29.5"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
